<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="kmitl.bank58070041.finalproject.lazycafe.controller.activity.KindCoffeepage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:padding="10dp"
        android:text="Kind Coffee"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30dp" />

     <TextView
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="All Kind Coffee 20 Bath"
         android:textAlignment="center"
         android:textSize="20dp"
         android:textColor="#ffffff"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

        <ImageView
            android:id="@+id/espresso"
            android:layout_margin="10dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/espresso"/>


        <ImageView
            android:id="@+id/americano"
            android:layout_margin="10dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/americano" />


        <ImageView
            android:id="@+id/macchiato"
            android:layout_margin="10dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/macchiato" />
        </LinearLayout>

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:orientation="horizontal"
             android:layout_gravity="center">

        <ImageView
            android:id="@+id/cappuccino"
            android:layout_margin="10dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/cappuccino" />

        <ImageView
            android:id="@+id/flat_white"
            android:layout_margin="10dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/flat_white" />

        <ImageView
            android:id="@+id/mocha"
            android:layout_margin="10dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/mocha" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/affogato"
                android:layout_margin="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/affogato" />

            <ImageView
                android:id="@+id/latte"
                android:layout_margin="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/latte" />

            <ImageView
                android:id="@+id/latte_macchiato"
                android:layout_margin="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/latte_macchiato" />
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:onClick="btnNextClick"
        android:text="Next"
/>

    </LinearLayout>
</RelativeLayout>
