<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context="kmitl.bank58070041.finalproject.lazycafe.controller.activity.ExtraActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="#ffffff"
            android:padding="10dp"
            android:text="Extra"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/wipcream"
                    android:layout_margin="10dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:background="@drawable/whipcream"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:textColor="#ffffff"
                    android:text="Whipcream(+15 Bath)"/>


                <ImageView
                    android:id="@+id/milk_shot"
                    android:layout_margin="10dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:background="@drawable/milk" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:textColor="#ffffff"
                    android:text="Milk Shot(+10 Bath)"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/extra_shot"
                android:layout_margin="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/shot" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textColor="#ffffff"
                android:text="Extra Shot(+20 Bath)"/>

            <ImageView
                android:id="@+id/double_shot"
                android:layout_margin="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/double_shot" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textColor="#ffffff"
                android:text="Double Shot(+35 Bath)"/>
        </LinearLayout>

</LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_margin="50dp"
            android:layout_gravity="center"
            android:onClick="btnNextClick"
            android:text="Next"
            />

    </LinearLayout>

</RelativeLayout>
