<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_queue"
        android:icon="@drawable/queue"
        android:title="@string/queue" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/avatar"
        android:title="@string/profile" />

</menu>
